<?xml version="1.0" encoding="utf-8"?>
<resources>

    	
    <string name="app_id">894251437257928</string>


    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="app_name">Store Finder</string>
    <string name="action_settings">Settings</string>
    <string name="no_results_found">No Results Found.</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="starred">Starred</string>
    <string name="featured">Featured</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="weather">Weather</string>
    <string name="about_us">About Us</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="animation">Settings</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="header_categories">Categories</string>
    <string name="header_extras">Extras</string>
    <string name="header_users">Users</string>
    <string name="rate_it">Rate It!</string>
    <string name="average_based_on">average based on</string>
    <string name="rating">rating</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="rate_store">Rate Store</string>
    <string name="ok">OK</string>
    <string name="network_error">Network Error</string>
    <string name="no_network_connection">No Network Connection.</string>
    <string name="placeholder_username">Username</string>
    <string name="placeholder_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_login_to_facebook">Login to Facebook</string>
    <string name="button_login_to_twitter">Login to Twitter</string>
    <string name="view">View</string>
    <string name="comments">Comment(s)</string>
    <string name="login_error">Login Error</string>
    <string name="login_error_review">You need to login before you can post review.</string>
    <string name="login_error_rating">You need to login before you can rate a store.</string>
    <string name="rating_error">Rating Error</string>
    <string name="rating_error_finish">You have finished rating this store.</string>
    <string name="rating_error_something_wrong">Error while connecting. Please rate again later.</string>
    <string name="choose_browser">Choose a browser :</string>
    <string name="choose_email_client">Choose an Email client :</string>
    <string name="email_subject">Store Inquiry</string>
    <string name="email_body">Hi, your store is awesome.</string>
    <string name="cannot_proceed">Cannot proceed because details isnt provided.</string>
    <string name="no_image_to_display">No image to be displayed.</string>
    <string name="handset_not_supported">This handset doest not support telephony service.</string>
    <string name="action_error">Action Error</string>
    <string name="sms_body">Hi, your store is awesome.</string>
    <string name="review">Review</string>
    <string name="problems_encountered_facebook">Problems encountered while posting to Facebook.</string>
    <string name="publish_cancelled">Publish cancelled.</string>
    <string name="publish_error">Publishing Error</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="user_name">Username</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="some_fields_are_missing">Some fields are missing.</string>
    <string name="password_length_error">Password must be at lease 8 characters long.</string>
    <string name="field_error">Field Error</string>
    <string name="update_profile">Update Profile</string>
    <string name="search_by_name_or_address">Search by Name or Address</string>
    <string name="radius">Radius</string>
    <string name="km">Km.</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="all_categories">All Categories</string>
    <string name="no_rating">No Rating</string>
    <string name="location_error">Location Error</string>
    <string name="cannot_determine_location">Cannot determine location.</string>
    <string name="cannot_determine_direction">Failed to get direction.</string>
    <string name="weather_placeholder">-------</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="route_error">Route Error</string>
    <string name="route_error_details">Cannot route current location.</string>
    <string name="share">Share</string>
    <string name="placeholder_review">Review</string>
    <string name="chars_left">Char(s) left</string>
    <string name="about_us_detail">We are small team that aims for awesome Game and Apps Development. There are no application we cannot do as long as there is music that keeps us going and creating wonderful apps.\n\nIf you are looking for awesome Teams that will make your Apps interactive and awesome. Just contact us.</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_details">1.) Lorem Ipsum dolor\n\nLorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\n2.) Lorem Ipsum dolor\n\nLorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\n3.) Lorem Ipsum dolor\n\nLorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="logout">Logout</string>
    <string name="text_empty">-------</string>
    <string name="email_subject_company">Store Finder Inquiry</string>
    <string name="email_body_company">Hi! Good day.</string>
    <string name="alert_logout_user_title">Logout User</string>
    <string name="alert_logout_user_title_details">Are you sure you want to logout?</string>
    <string name="alert_logout_user_yes">Yes</string>
    <string name="alert_logout_user_no">No</string>
    <string name="click_to_add_edit">Click to Add/Edit</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="mi">Mi</string>
    <string name="find_nearby">Find Nearby</string>
    <string name="empty_error">Text Empty Error</string>
    <string name="empty_error_details">Provide text for review.</string>
    <string name="no_name"></string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="failed_data">Failed to get data.</string>
    <string name="editing_fields">**When editing all fields are necessary.</string>
    <string name="loading">Loading...</string>
    <string name="tap_back_again_to_exit">Please tap back again to exit the app.</string>
    <string name="empty_distance">----</string>
    <string name="problems_encountered_login">Problems encountered during login.</string>
    <string name="store_nearby_radius">Store Nearby Radius</string>
    <string name="login_error_undetermined">Error encountered during connecting.</string>
    <string name="enter_radius">Enter Radius in KM</string>

    <string name="enter_radius_in_km">Radius in KM:</string>
    <string name="call_block_error">Cannot proceed to calling.</string>
    <string name="download_app">Hey! I found this store. Download our app.</string>
    <string name="select_one_store">You need to select one store by tapping the Info window.</string>

    <string name="gps_not_on">GPS is currently turn off. Please enable it under your mobile Settings > Location.</string>
</resources>
