<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <ImageView
	                android:id="@+id/imgViewCover"
	                android:layout_width="match_parent"
	                android:layout_height="250dp"
	                android:scaleType="centerCrop"
	                android:src="@drawable/profile_placeholder" />
                
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/click_to_add_edit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_white_cloor"
                    android:textSize="@dimen/text_size_14sp" />
            </FrameLayout>

            

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="@drawable/line_divider_orange" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_weight="1" >

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    
                    <com.libraries.imageview.MGImageView
					        android:id="@+id/imgViewThumb"
					        android:layout_width="100dp"
		                    android:layout_height="100dp"
					        android:adjustViewBounds="true"
					        android:cropToPadding="true"
					        android:scaleType="center"
					        android:src="@drawable/profile_thumb_placeholder" />
                    
                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/click_to_add_edit"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_white_cloor"
                        android:textSize="@dimen/text_size_12sp" />
                    
                </FrameLayout>

                

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/txtFullName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/textbox_profile"
                        android:ems="10"
                        android:digits="abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ ,."
                        android:hint="@string/full_name" >

                    </EditText>

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:background="@drawable/textbox_profile"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/txtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:background="@drawable/textbox_profile"
                        android:ems="10"
                        android:hint="@string/user_name"
                        android:digits="abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ_" />

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/dimen_5dp"
                        android:background="@drawable/textbox_profile"
                        android:hint="@string/password"
                        android:inputType="textPassword" >
                    </EditText>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="@dimen/dimen_20dp"
                android:background="@drawable/button_blue_selector"
                android:text="@string/register"
                android:textColor="@color/text_white_cloor"
                android:textSize="@dimen/text_size_22sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
